# greptimedb-ingester-c

./: .gitignore  Makefile  README  README.md
.github/workflows/: dev.yml  package.yml
c/src/: greptime.h
cpp/: .clang-format
cpp/src/: greptime.h  main.c
docker/package/: Dockerfile
ffi/: Cargo.toml
ffi/src/: error.rs  ffi.rs  inserter.rs  lib.rs  logger.rs  row.rs  util.rs
scripts/: build_example.sh  build_so.sh  format.sh
