[package]
name = "greptimedb-client-cpp-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
backtrace = "0.3"
#greptime-proto = { git = "https://github.com/niebayes/greptime-proto.git", rev = "091ffd86f1472161551f612da7fde3bc133cfdf6" }
greptimedb-client = { git = "https://github.com/GreptimeTeam/greptimedb-client-rust.git", rev = "bc32362adf0df17a41a95bae4221d6d8f1775656" }
lazy_static = "1.4"
libc = "0.2"
serde = "1.0"
snafu = { version = "0.7", features = ["backtraces"] }
tokio = { version = "1", features = ["full"] }
strum = { version = "0.25", features = ["derive"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_derive = "1.0.192"
