[package]
name = "greptimedb-client-cpp-ffi"
version = "0.1.0"
edition = "2024"

[lib]
name = "greptime"
crate-type = ["cdylib"]

[dependencies]
backtrace = "0.3"
greptimedb-client = { git = "https://github.com/GreptimeTeam/greptimedb-client-rust.git", rev = "bc32362adf0df17a41a95bae4221d6d8f1775656" }
lazy_static = "1.4"
libc = "0.2"
serde = "1.0"
snafu = { version = "0.8", features = ["backtrace"] }
tokio = { version = "1", features = ["full"] }
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_derive = "1.0.192"
